updating vercel.json using bun-vercel

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "bun run index.js",
-    "dev": "bun --hot index.js"
+    "dev": "bun --hot index.js",
+    "build": "bun-vercel index.js"
   },
   "devDependencies": {
     "bun-types": "latest"
@@ -15,6 +16,7 @@
   "dependencies": {
     "@elysiajs/cors": "^0.6.0",
     "axios": "^1.5.0",
-    "elysia": "^0.6.23"
+    "elysia": "^0.6.23",
+    "bun-vercel": "^1.0.0-alpha.4"
   }
 }
