--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "bun run index.js",
     "dev": "bun --hot index.js",
-    "build": "bun-vercel index.js"
+    "install": "bun install"
   },
   "devDependencies": {
     "bun-types": "latest"
@@ -16,7 +16,6 @@
   "dependencies": {
     "@elysiajs/cors": "^0.6.0",
     "axios": "^1.5.0",
-    "elysia": "^0.6.23",
-    "bun-vercel": "^1.0.0-alpha.4"
+    "elysia": "^0.6.23"
   }
 }
